log
Thu 09 May 2024 08:29:06 PM UTC: 
 tests:  1|8
total_score: 0/70
138e3d9
Thu 09 May 2024 08:30:17 PM UTC: 
 treemap.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
 tests:  4|7
total_score: 5/70
b2789aa
Thu 09 May 2024 08:31:39 PM UTC: 
 treemap.c | 14 +++++++++++++-
 1 file changed, 13 insertions(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:89:1: error: control reaches end of non-void function [-Werror=return-type]
   89 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
3c32210
Thu 09 May 2024 08:31:58 PM UTC: 
 treemap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:91:1: error: control reaches end of non-void function [-Werror=return-type]
   91 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
f605c6c
Thu 09 May 2024 08:32:45 PM UTC: 
 treemap.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  11|6
total_score: 15/70
5195686
Thu 09 May 2024 08:34:09 PM UTC: 
 treemap.c | 25 +++++++++++++++++++++++++
 1 file changed, 25 insertions(+)
 tests:  12|6
total_score: 15/70
76c3c41
Thu 09 May 2024 08:35:45 PM UTC: 
 treemap.c | 13 +++++++++++++
 1 file changed, 13 insertions(+)
 tests:  12|6
total_score: 15/70
450273e
Thu 09 May 2024 08:37:40 PM UTC: 
 treemap.c | 22 +++-------------------
 1 file changed, 3 insertions(+), 19 deletions(-)
 tests:  12|6
total_score: 15/70
4b4788d
Thu 09 May 2024 08:41:45 PM UTC: 
 treemap.c | 8 ++++++++
 1 file changed, 8 insertions(+)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:71:34: error: too many arguments to function ‘createTreeMap’
   71 |                     aux->right = createTreeMap(key,value);
      |                                  ^~~~~~~~~~~~~
treemap.c:39:11: note: declared here
   39 | TreeMap * createTreeMap(int (*lower_than) (void* key1, void* key2)) {
      |           ^~~~~~~~~~~~~
treemap.c:71:32: error: assignment to ‘TreeNode *’ from incompatible pointer type ‘TreeMap *’ [-Werror=incompatible-pointer-types]
   71 |                     aux->right = createTreeMap(key,value);
      |                                ^
cc1: all warnings being treated as errors
Compilation failed
7790c98
Thu 09 May 2024 08:42:12 PM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:69:17: error: ‘else’ without a previous ‘if’
   69 |             } } else {
      |                 ^~~~
treemap.c: At top level:
treemap.c:83:1: error: expected identifier or ‘(’ before ‘}’ token
   83 | }
      | ^
Compilation failed
85cf2a3
Thu 09 May 2024 08:44:49 PM UTC: 
 treemap.c | 15 ++++++++-------
 1 file changed, 8 insertions(+), 7 deletions(-)
 tests:  12|6
total_score: 15/70
7fb51bc
Thu 09 May 2024 08:48:55 PM UTC: 
 treemap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:56:16: error: unused variable ‘parent’ [-Werror=unused-variable]
   56 |     TreeNode * parent = NULL;
      |                ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
71261c2
Thu 09 May 2024 08:49:30 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:56:8: error: ‘TreeNode’ has no member named ‘current’
   56 |     aux->current = aux;
      |        ^~
Compilation failed
f681c0b
Thu 09 May 2024 08:50:29 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  12|6
total_score: 15/70
4d10b69
Thu 09 May 2024 08:51:36 PM UTC: 
 treemap.c | 20 ++++++++++++++++++--
 1 file changed, 18 insertions(+), 2 deletions(-)
 tests:  14|5
total_score: 15/70
1b9d5e7
Thu 09 May 2024 08:52:43 PM UTC: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  14|5
total_score: 15/70
d5ee0d3
Thu 09 May 2024 08:52:51 PM UTC: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  14|5
total_score: 15/70
3240a5d
Thu 09 May 2024 08:53:36 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  14|5
total_score: 15/70
ff6813e
Thu 09 May 2024 08:53:56 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  14|5
total_score: 15/70
534b5dd
Thu 09 May 2024 08:54:53 PM UTC: 
 treemap.c | 26 +-------------------------
 1 file changed, 1 insertion(+), 25 deletions(-)
test.c: In function ‘minimum_test’:
test.c:225:19: error: implicit declaration of function ‘minimum’ [-Werror=implicit-function-declaration]
  225 |     TreeNode* n = minimum(tree->root);
      |                   ^~~~~~~
test.c:225:19: error: initialization of ‘TreeNode *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
test.c:239:7: error: assignment to ‘TreeNode *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
  239 |     n = minimum(tree->root->left);
      |       ^
test.c:250:7: error: assignment to ‘TreeNode *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
  250 |     n = minimum(tree->root);
      |       ^
test.c: In function ‘insertTreeMap’:
test.c:503:5: error: ‘main’ is normally a non-static function [-Werror=main]
  503 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:606:1: error: expected declaration or statement at end of input
  606 | }
      | ^
test.c:606:1: error: expected declaration or statement at end of input
test.c:606:1: error: expected declaration or statement at end of input
test.c:606:1: error: expected declaration or statement at end of input
test.c:606:1: error: expected declaration or statement at end of input
At top level:
test.c:503:5: error: ‘main’ defined but not used [-Werror=unused-function]
  503 | int main( int argc, char *argv[] ) {
      |     ^~~~
cc1: all warnings being treated as errors
Compilation failed
55277b5
Thu 09 May 2024 08:55:45 PM UTC: 
 treemap.c | 24 +++++++-----------------
 1 file changed, 7 insertions(+), 17 deletions(-)
 tests:  13|5
total_score: 15/70
93845df
Thu 09 May 2024 08:57:17 PM UTC: 
 treemap.c | 23 +++++++++++++++++++++++
 1 file changed, 23 insertions(+)
 tests:  12|5
total_score: 15/70
8725264
Thu 09 May 2024 09:00:24 PM UTC: 
 treemap.c | 20 --------------------
 1 file changed, 20 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:54:16: error: unused variable ‘aux’ [-Werror=unused-variable]
   54 |     TreeNode * aux = tree->root;
      |                ^~~
cc1: all warnings being treated as errors
Compilation failed
f2c2daf
Thu 09 May 2024 09:09:07 PM UTC: 
 treemap.c | 29 +++++++++++++++++++++++++++++
 1 file changed, 29 insertions(+)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:64:59: error: expected statement before ‘)’ token
   64 |             if(tree->lower_than(key, aux->pair->key) == 0)){
      |                                                           ^
treemap.c:64:13: error: this ‘if’ clause does not guard... [-Werror=misleading-indentation]
   64 |             if(tree->lower_than(key, aux->pair->key) == 0)){
      |             ^~
treemap.c:64:60: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the ‘if’
   64 |             if(tree->lower_than(key, aux->pair->key) == 0)){
      |                                                            ^
cc1: all warnings being treated as errors
Compilation failed
8e6c9ce
Thu 09 May 2024 09:09:14 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  12|5
total_score: 15/70
5d06dbe
Thu 09 May 2024 09:10:33 PM UTC: 
 treemap.c | 17 ++++++++++++-----
 1 file changed, 12 insertions(+), 5 deletions(-)
 tests:  14|5
total_score: 15/70
815e293
Thu 09 May 2024 09:11:38 PM UTC: 
 treemap.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  16|4
total_score: 20/70
5e4449b
Thu 09 May 2024 09:12:53 PM UTC: 
 treemap.c | 16 ++++++++++++++++
 1 file changed, 16 insertions(+)
 tests:  21|3
total_score: 35/70
a8d2a44
